# pttman

./: .dir-locals.el  .gitignore  .prettierrc.mjs  AGENTS.md  LICENSE  README.md  install.sh  lefthook.yaml  package.json  pttman  pttman.py  pyproject.toml
.github/workflows/: publish.yml
integration-tests/: docker-compose.yml  run.sh
integration-tests/openrc-system/: Dockerfile  test.sh
integration-tests/openrc-user/: Dockerfile  test.sh
integration-tests/shared/: fake-pactl
integration-tests/systemd/: Dockerfile  test.sh
openrc-system/: pttman
openrc-user/: pttman
plans/: implementation.md  mute-state-tracking.md
pttman/: __init__.py  pttman.py
systemd/: pttman.service
tests/: test_pttman.py
