[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pttman"
version = "0.0.1"
description = "Push-to-talk microphone control with a daemon-backed command queue"
license = "MIT"
requires-python = ">=3.9"

[project.scripts]
pttman = "pttman:main"

[tool.hatch.build.targets.wheel]
include = ["pttman.py"]
