[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pttman"
version = "0.4.1"
description = "Push-to-talk microphone control with a daemon-backed command queue"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
pttman = "pttman:main"

[tool.hatch.build.targets.wheel]
packages = ["pttman"]

[tool.hatch.build.targets.wheel.force-include]
"openrc-system/pttman" = "pttman/openrc-system/pttman"
"openrc-user/pttman" = "pttman/openrc-user/pttman"
"systemd/pttman.service" = "pttman/systemd/pttman.service"

[tool.ty.rules]
all = "error"
